# cursova_v3

./: .gitignore  ARCHITECTURE.txt  PERSONAL_DASHBOARD_SUMMARY.md  README.md  SETUP.md  ПРОЕКТ.md
.claude/: settings.local.json
backend/: .env.example  .gitignore  README.md  add_historical_bookings.py  add_more_users.py  award_bonus_points_retroactively.py  check_user_points.py  create_admin.py  pyproject.toml  seed_database.py  seed_database_with_offers.py
backend/alembic/: env.py
backend/alembic/versions/: 2025_12_03_1543-c34febdfc7f8_initial_migration.py  2025_12_09_1556-9497e1ee7890_initial_migration_with_offers_system.py  2025_12_11_1708-33fe63206383_add_bonus_points_to_users.py
backend/app/: main.py
backend/app/controllers/: __init__.py  auth_controller.py  booking_controller.py  offer_controller.py  room_controller.py  statistics_controller.py  user_controller.py
backend/app/core/: config.py  security.py
backend/app/database/: __init__.py  base.py
backend/app/dependencies/: __init__.py  auth.py  repositories.py
backend/app/models/: __init__.py  booking.py  offer.py  room.py  user.py
backend/app/repositories/: __init__.py  base.py  booking_repository.py  factory.py  offer_repository.py  room_repository.py  user_repository.py
backend/app/schemas/: __init__.py  auth.py  booking.py  offer.py  room.py  user.py
backend/app/services/: pricing_strategies.py  statistics_builder.py
backend/app/views/: __init__.py  auth.py  bookings.py  offers.py  rooms.py  statistics.py  users.py
frontend/: README.md  package-lock.json  package.json
(+28 files in other folders)
